--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
                   </span>
                   <span>Data</span>
                   </a>
+              </span>
+              
+              <!-- Code Link. -->
+              <span class="link-block">
+                <a href="https://github.com/tv-100/tv-100.github.io/tree/main/code"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span>
+                  <span>Demo</span>
+                  </a>
             </div>
 
           </div>
