--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h1 class="title is-1 publication-title">TV100: A TV Series Dataset that Pre-Trained CLIP Has Not Seen</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://www.lamda.nju.edu.cn/zhoudw/">Da-Wei Zhou</a><sup>1</sup>,</span>
+              <a href="https://www.lamda.nju.edu.cn/zhoudw/">Da-Wei Zhou</a><sup>1,2</sup>,</span>
             <span class="author-block">
               <a href="https://www.lamda.nju.edu.cn/qizh/">Zhi-Hong Qi</a><sup>1,2</sup>,</span>
             <span class="author-block">
@@ -70,7 +70,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/"
+                <a href="https://arxiv.org/abs/2404.12407"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
