--- a/index.html
+++ b/index.html
@@ -160,6 +160,22 @@ evaluation of zero-shot and finetuned performance.
 
   </section>
 
+  <section class="section">
+    <div class="container is-max-desktop">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h2 class="title is-3 "> BibTeX </h2>
+          <div class="content has-text-justified">
+            <!-- <h2 class="title">BibTeX</h2> -->
+      <pre><code>@article{zhou2024tv,
+        title={TV100: A TV Series Dataset that Pre-Trained CLIP Has Not Seen},
+        author={Zhou, Da-Wei and Qi, Zhi-Hong and Ye, Han-Jia and Zhan, De-Chuan},
+        journal={arXiv preprint arXiv:2404.12407},
+        year={2024}
+        }</code></pre>
+
+  </section>
+
 
 
 <footer class="footer">
