--- a/index.html
+++ b/index.html
@@ -168,11 +168,14 @@ evaluation of zero-shot and finetuned performance.
           <div class="content has-text-justified">
             <!-- <h2 class="title">BibTeX</h2> -->
       <pre><code>@article{zhou2024tv,
-        title={TV100: A TV Series Dataset that Pre-Trained CLIP Has Not Seen},
-        author={Zhou, Da-Wei and Qi, Zhi-Hong and Ye, Han-Jia and Zhan, De-Chuan},
-        journal={arXiv preprint arXiv:2404.12407},
-        year={2024}
-        }</code></pre>
+      title={TV100: A TV Series Dataset that Pre-Trained CLIP Has Not Seen},
+      author={Zhou, Da-Wei and Qi, Zhi-Hong and Ye, Han-Jia and Zhan, De-Chuan},
+      journal={Frontiers of Computer Science},
+      year={2024},
+      volume = {18},
+      number = {5},
+      pages = {185349},
+    }</code></pre>
 
   </section>
 
