--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://drive.google.com/file/d/1gNf8ZH-ZyZltVQCezJZzp1FHrFVWkeWa/view?usp=drive_link"
+                <a href="https://njuedu-my.sharepoint.cn/:u:/g/personal/ky2409911_365_nju_edu_cn/EThU1xlar2tClLsE9V1JQ_wBsMdTlvaw9q38lz6tptTZ1A?e=JtxFTZ"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
@@ -155,7 +155,7 @@ evaluation of zero-shot and finetuned performance.
           <div class="content has-text-justified">
             <p>
             The dataset is accessible at: <a
-              href="https://drive.google.com/file/d/1gNf8ZH-ZyZltVQCezJZzp1FHrFVWkeWa/view?usp=drive_link">TV100</a>.
+              href="https://njuedu-my.sharepoint.cn/:u:/g/personal/ky2409911_365_nju_edu_cn/EThU1xlar2tClLsE9V1JQ_wBsMdTlvaw9q38lz6tptTZ1A?e=JtxFTZ">TV100</a>.
             </p>
 
   </section>
